# thedarkmod

./: CMakeLists.txt  appveyor.yml  engine.vcxproj  engine.vcxproj.filters  idlib.vcxproj  idlib.vcxproj.filters
CiScripts/: build_cmake.py  build_msvc_extra.cmd  build_msvc_main.cmd  conan_build.py  conan_rebuild_artefacts.py  conan_rebuild_artefacts_ci.py  conan_setconf.py  global.conf  linux_install.py
framework/: CVarSystem.cpp  CVarSystem.h  Common.cpp  Common.h  Console.cpp  FileSystem.cpp  GamepadInput.cpp  KeyInput.cpp  Session.cpp  Session_menu.cpp  Tracing.cpp  Tracing.h  TracingEmbeddedSourceCode.cpp
framework/minizip/: minizip_extra.c  minizip_extra.h  minizip_private.h
game/: Actor.cpp  DownloadMenu.cpp  DownloadMenu.h  Entity.cpp  Entity.h  Game_local.cpp  Game_local.h  LightEstimateSystem.cpp  LightEstimateSystem.h  ModMenu.cpp  ModMenu.h  Player.cpp  Player.h  PlayerView.cpp
game/Missions/: ModInfo.cpp
game/ai/: AI.cpp
game/ai/States/: IdleState.cpp
game/gamesys/: SysCvar.cpp  SysCvar.h
game/physics/: Physics_Player.h
game/script/: Script_Thread.cpp  Script_Thread.h
glprogs/: HeatHazeWithMaskAndDepth.fs  ambientInteraction.fs  ambientInteraction.vs  heatHaze.fs  heatHaze.vs  heatHazeCommon.glsl  heatHazeWithMask.fs  heatHazeWithMaskAndBlur.fs  heatHaze_v2.fs  heatHaze_v2.vs.glsl  ssao.frag.glsl  ssao.vert.glsl  ssao_blur.frag.glsl  ssao_depth.frag.glsl  ssao_normals.frag.glsl  tdm_constants_shared.glsl  tdm_dither.glsl  tdm_interaction.fs.glsl  tdm_interaction.glsl  tdm_interaction.vs.glsl  tdm_parallax.glsl  volumetric_raymarching.fs
glprogs/gl4/: black.frag.glsl  depth.frag.glsl  depth.vert.glsl  depthFast.vert.glsl  interaction.frag.glsl  interaction.vert.glsl  interaction_clustered.frag.glsl  interaction_clustered.vert.glsl  projection.glsl
glprogs/stages/common/: common.frag.glsl  common.vert.glsl  entity_params.glsl  view_params.glsl
glprogs/stages/depth/: depth.frag.glsl  depth.params.glsl  depth.vert.glsl
glprogs/stages/frob/: frob.vert.glsl  frob_highlight.frag.glsl
glprogs/stages/interaction/: interaction.ambient.fs.glsl  interaction.ambient.vs.glsl  interaction.common.fs.glsl  interaction.common.vs.glsl  interaction.params.glsl  interaction.shadowmap.fs.glsl  interaction.stencil.fs.glsl
glprogs/stages/occlusion/: occlusion.frag.glsl  occlusion.vert.glsl
glprogs/stages/stencil/: stencilshadow.vert.glsl
glprogs/stages/tonemap/: tonemap.frag.glsl
idlib/: ParallelJobList.cpp  Str.h  Thread.cpp  precompiled.h  svnversion.cmake.h
idlib/containers/: List.h  SortedMap.h
idlib/math/: PoissonSampling.cpp  PoissonSampling.h
renderer/: AmbientOcclusion.cpp  AmbientOcclusion.h  AmbientOcclusionStage.cpp  AmbientOcclusionStage.h  BufferObject.cpp  BufferObject.h  DynamicResolutionScaler.cpp  DynamicResolutionScaler.h  FrameBuffer.cpp  FrameBuffer.h  FrameBufferManager.cpp  GLSLProgram.cpp  GLSLProgram.h  GLSLProgramManager.cpp  GLSLUniforms.h  Image.h  Image_init.cpp  Image_load.cpp  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  Model_ase.cpp  Model_local.h  Model_lwo.cpp  Model_ma.cpp  RenderSystem.cpp  RenderSystem_init.cpp  VertexCache.cpp  VertexCache.h  draw_common.cpp  draw_glsl.cpp  glsl.h  qgl.cpp  qgl.h  tr_backend.cpp  tr_local.h  tr_main.cpp  tr_render.cpp
renderer/Backend/: Backend.cpp  Backend.h  DepthStage.h  ParameterBufferObject.cpp  ParameterBufferObject.h  PersistentBufferObject.cpp  PersistentBufferObject.h  RenderStage.h
renderer/GL4/: DepthStage.cpp  DepthStage.h  GL4Backend.cpp  GL4Backend.h  InteractionStage.cpp  InteractionStage.h  LightClusterer.cpp  LightClusterer.h  PersistentBuffer.cpp  PersistentBuffer.h
renderer/backend/: DepthStage.cpp  DepthStage.h  DrawBatchExecutor.cpp  DrawBatchExecutor.h  FrameBuffer.cpp  FrameBuffer.h  FrameBufferManager.cpp  FrobOutlineStage.cpp  FrobOutlineStage.h  GLSLProgram.cpp  GLSLProgramManager.cpp  GpuBuffer.cpp  GpuBuffer.h  GpuOcclusionQueryStage.cpp  GpuOcclusionQueryStage.h  ImmediateRendering.cpp  ImmediateRendering.h  InteractionStage.cpp  LightOcclusionQueryStage.cpp  LightOcclusionQueryStage.h  RenderBackend.cpp  RenderBackend.h  ShadowMapStage.cpp  StencilShadowStage.cpp  UniversalGpuBuffer.cpp  VertexArrayState.cpp  VertexArrayState.h  glsl.cpp  glsl.h  tr_backend.cpp  tr_render.cpp  tr_rendertools.cpp
renderer/backend/stages/: DepthStage.cpp  FrobOutlineStage.cpp  InteractionStage.cpp  InteractionStage.h  SurfacePassesStage.cpp  SurfacePassesStage.h  TonemapStage.cpp
renderer/frontend/: LightQuerySystem.cpp  LightQuerySystem.h  RenderWorld.cpp  RenderWorld.h  RenderWorld_local.h  tr_light.cpp  tr_subview.cpp
renderer/resources/: CinematicFFMpeg.cpp  Image.h  Image_init.cpp  Image_load.cpp  Material.cpp  Material.h  Model.cpp  Model.h  Model_local.h  ParticleSystem.cpp
renderer/vulkan/: DeviceLocalBuffer.cpp  DeviceLocalBuffer.h  FrameAheadGpuBuffer.cpp  FrameAheadGpuBuffer.h  StagingBuffer.cpp  StagingBuffer.h  Texture.cpp  Texture.h  VulkanDevice.cpp  VulkanDevice.h  VulkanSystem.cpp  VulkanSystem.h  qvk_platform.h  qvulkan.h  vulkan.h
sound/: snd_emitter.cpp  snd_local.h  snd_world.cpp  sound.h
sys/cmake/: PrecompiledHeader.cmake  SvnVersion.cmake  gcc_32bit.cmake
sys/linux/: main.cpp
sys/msvc/natvis/: game.natvis  idlib.natvis
sys/msvc/properties/: AddressSanitizer.props  Common_x64.props  Common_x86.props  _Common.props  _Debug.props  _DebugEditable.props  _DebugFast.props  _DoomDLL.props  _Release.props
sys/posix/: platform_linux.cpp
sys/scons/: SConscript.core
sys/win32/: win_glimp.cpp  win_main.cpp  win_vkimp.cpp
tdm_installer/: CMakeLists.txt
tdm_installer/zipsync/: CMakeLists.txt  conan_build.bat  export_embedded_recipes.bat
tdm_installer/zipsync/args-conan/: conanfile.py
tests/: SortedMapTest.cpp
tools/compilers/dmap/: dmap.cpp
tools/radiant/: CamWnd.cpp
ui/: EditWindow.cpp  ListWindow.cpp  SliderWindow.cpp  Window.cpp  Window.h
